kubernetes/conform/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: conform
  labels:
    goldilocks.fairwinds.com/enabled: "true"
