kubernetes/conform/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: conform-orchestrator
  namespace: conform
spec:
  selector:
    app: conform-orchestrator
  ports:
    - name: webhook
      port: 8080
      targetPort: webhook
