kubernetes/conform/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: conform
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

---
# No rule for NFS anywhere in this file: the kubelet mounts the export on the
# node, so that traffic never leaves a pod endpoint for Cilium to police.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver
  namespace: conform
spec:
  endpointSelector:
    matchLabels:
      app: conform-orchestrator
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-arr-webhook
  namespace: conform
spec:
  endpointSelector:
    matchLabels:
      app: conform-orchestrator
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: arr
            k8s:app: sonarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: arr
            k8s:app: radarr
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
